Sun Oct 20 05:48:40 2002 EDT  Paul Duncan <pabs@pablotron.org>
  
  * Added Xinerama support.  Currently defaults to fullscreen on the
    first head (this can be fixed with a little work).
  * Added winwidget_{move,get_geometry}();

Wed Sep 11 19:53:31 BST 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * REALLY release 1.2.1

Wed Sep 11 19:52:24 BST 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * autoconf fixes
  * throw out the damn non-free "public domain" fonts.
  * stick in yudit.ttf. it's not as pretty, but it is, apparently, DFSG
    compliant etc.

Wed Sep 11 19:44:25 BST 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Release 1.2.1

Wed Sep 11 19:43:24 BST 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Patch from Panagiotis Issaris <takis.issaris@skynet.be>
    - adds support for using the numeric keypad to scroll and zoom the image.

Wed Jul 31 22:31:21 BST 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fixed --draw-filename (was --draw_filename but not documented as such -
    oops, that's been broken a terribly long time :))

Tue Apr 16 19:19:11 BST 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Release 1.2.0

Fri Mar 08 21:04:07 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Patch from Omar Harriott <omar.harriott@csun.edu>
  * fix filelist handling for filenames with spaces.

Fri Feb 08 21:52:48 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Don't segv on save if win->file is NULL, use the mode + .png for the
    filename, or noname.png as a last resort. Reported by mousey.

Sun Feb 03 19:28:19 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Erp. s/wprintf/weprintf - I didn't notice the typo because wprintf is a
    wide character printf. Luckily someone compiled feh on PPC and noticed the
    bug.

Wed Jan 30 13:54:29 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * New menu colour/style - "feh -Tblack src/testimages"

Wed Jan 30 13:29:21 GMT 2002  Tom Gilbert <tom@linuxbrit.co.uk>

  * Patch from Jens Laas <jens.laas@data.slu.se>